# telecom-notification-service

./: .dockerignore  .env.example  .gitignore  COMMITS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/application/dtos/: __init__.py  notification_dtos.py
src/application/use_cases/: __init__.py  create_notification.py  delete_notification.py  get_notification.py  list_notifications.py  update_notification_status.py
src/config/: app.py  database.py  exceptions.py  settings.py
src/domain/: enums.py  exceptions.py
src/domain/models/: __init__.py  domain_event.py  notification.py
src/domain/ports/: __init__.py  event_publisher.py  notification_repository.py
src/infrastructure/events/: noop_event_publisher.py
src/infrastructure/persistence/migrations/: README  env.py
src/infrastructure/persistence/sqlalchemy/: __init__.py  mappers.py  notification_model.py  notification_repository.py
src/infrastructure/web/fastapi/: dependencies.py  error_handlers.py  schemas.py  (+1 more)
tests/: conftest.py
tests/integration/: test_notification_repository.py
tests/unit/: notification_api_fakes.py  test_create_notification.py  test_database.py  test_delete_notification.py  test_dependencies.py  test_error_handlers.py  test_get_notification.py  test_health_api.py  test_list_notifications.py  test_main.py  test_mappers.py  test_notification_validation.py  test_notifications_api.py  test_ports.py  test_self_ping.py  test_settings.py  test_update_notification_status.py
(+3 files in other folders)
